[package]
name = "wasm-game-lib"
version = "0.1.0"
authors = ["Mubelotix <unbeliever.in.time@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.32"
wasm-bindgen = "0.2.55"


[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3.32"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
  'Event',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'CanvasRenderingContext2d',
  'HtmlImageElement',
  'KeyboardEvent']
